--- a/src/Components/layout/Sidebar/Sidebar.css
+++ b/src/Components/layout/Sidebar/Sidebar.css
@@ -17,3 +17,8 @@
     border-right: 1px solid rgba(128, 128, 128, 0.336);
 
 }
+.profile{
+    position: absolute;
+    bottom: 120px;
+    left: 30px;
+}
